--- a/shrasin2.ipynb
+++ b/shrasin2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bc73209e",
+   "id": "98d7b5ac",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d223c602",
+   "id": "5bb14412",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4ebc3961",
+   "id": "0518c829",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6dce508b",
+   "id": "361a9acf",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7aa52432",
+   "id": "1f3824d9",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "99af95af",
+   "id": "6d66f4d7",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3b454e05",
+   "id": "fdd769db",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ab1c2b52",
+   "id": "5aa569f3",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "76578e97",
+   "id": "465e61ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1567ddda",
+   "id": "05e77812",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4cbf789",
+   "id": "02ea757c",
    "metadata": {},
    "source": [
     "# markdown things\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "18a2ad01",
+   "id": "be60672c",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a07e9b8b",
+   "id": "3f62033b",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "bd6b754c",
+   "id": "6b8642b8",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "264c1ec4",
+   "id": "e851efd3",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "42bf8d67",
+   "id": "5b8d41a7",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "20d551eb",
+   "id": "79d104b1",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "30211915",
+   "id": "eb2e2109",
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "a953a239",
+   "id": "78301946",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "feeb9562",
+   "id": "8997da56",
    "metadata": {},
    "outputs": [
     {
@@ -395,17 +395,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "c26f47e4",
+   "execution_count": 41,
+   "id": "32e7ce9d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter first word: egg\n",
-      "Enter second word: chicken\n",
-      "egg comes before chicken\n"
+      "Enter first word: chicken\n",
+      "Enter second word: egg\n",
+      "egg comes beforechicken\n"
      ]
     }
    ],
@@ -415,13 +415,13 @@
     "if word1 > word2 :\n",
     "    print(word1, 'comes before', word2) # print(f'{word1} comes before{word2}')\n",
     "else:\n",
-    "    print( word2, 'comes before', word1)"
+    "    print(f'{word2} comes before {word1}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6161e593",
+   "id": "f4358c1f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -429,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cadb6b6",
+   "id": "889ddbf9",
    "metadata": {},
    "outputs": [],
    "source": []
