--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0b9da77",
+   "id": "2e88141e",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "885185fa",
+   "id": "bab1463d",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f9e46e37",
+   "id": "a2a72a9f",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "2a6d20dd",
+   "id": "1767a4b7",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "976c76ed",
+   "id": "dce04263",
    "metadata": {},
    "outputs": [
     {
@@ -158,16 +158,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "ff8fd3b9",
+   "execution_count": 32,
+   "id": "773cf652",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unterminated string literal (detected at line 4) (2430639385.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[28], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(f'Here is your entries order {word2} and {word1}'')\u001b[0m\n\u001b[0m                                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 4)\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "please enter random word: a\n",
+      "please enter another word b\n",
+      "Here is your entries order b and a\n"
      ]
     }
    ],
@@ -183,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b1ba851",
+   "id": "ad06b26a",
    "metadata": {},
    "outputs": [],
    "source": []
