--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -256,14 +256,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "d453c6b1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the word_1: egg\n",
+      "Enter the word_2: chicken\n",
+      "egg comes before chicken\n"
+     ]
+    }
+   ],
    "source": [
     "word_1 = input('Enter the word_1: ')\n",
     "word_2 = input('Enter the word_2: ')\n",
-    "if 'word_1' < 'word_2':\n",
+    "if word_1' < 'word_2':\n",
     "    print(f'{word_1} comes before {word_2}')\n",
     "else:\n",
     "    print(f'{word_2} comes before {word_1}')"
