--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9b2eeca9",
+   "id": "707938e3",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "26fee484",
+   "id": "68ce38f5",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1270a1c3",
+   "id": "dc7131ec",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "296991a9",
+   "id": "8377f385",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f49df588",
+   "id": "01860d36",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f682b6d",
+   "id": "e3d5ec56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "fb01e04a",
+   "id": "5f28dc78",
    "metadata": {},
    "outputs": [
     {
@@ -145,16 +145,22 @@
     "name2= input ('Enter a 2nd name: ')\n",
     "if name1 > name2:\n",
     "    print (f'{name2} comes before {name1})\n",
-    "           else: "
+    "           else: \n",
+    "           print "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "099627a5",
+   "id": "ada29d40",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name1= input ('Enter a 1st name: ')\n",
+    "name2= input ('Enter a 2nd name: ')\n",
+    "if name1 > name2:\n",
+    "    print (print(f'Word {word2} comes first'))"
+   ]
   }
  ],
  "metadata": {
