--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "22db1ec7",
+   "id": "c56c72ed",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "02dd4a42",
+   "id": "7a720c38",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ace790af",
+   "id": "87b2b63b",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ba60521",
+   "id": "11c2e456",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6bf5b1c7",
+   "id": "42caf588",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "17f64348",
+   "id": "23e823b3",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "13c49ef5",
+   "id": "757450d2",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "37dbfef5",
+   "id": "47d67de3",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b402e671",
+   "id": "2652fb12",
    "metadata": {},
    "outputs": [
     {
@@ -149,8 +149,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "2a54e80b",
+   "execution_count": 16,
+   "id": "806d3cb2",
    "metadata": {
     "scrolled": false
    },
@@ -159,9 +159,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter first wordalfa\n",
-      "Enter second wordcisco\n",
-      "Word alfa comes first\n"
+      "Enter first wordf\n",
+      "Enter second worda\n",
+      "Word a comes before f\n"
      ]
     }
    ],
@@ -169,23 +169,15 @@
     "word1 = input('Enter first word')\n",
     "word2 = input('Enter second word')\n",
     "if word1 > word2:\n",
-    "    print(f'Word {word2} comes first')\n",
+    "    print(f'Word {word2} comes before {word1}')\n",
     "else:\n",
-    "    print(f'Word {word1} comes first')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3a053d27",
-   "metadata": {},
-   "source": [
-    "#test"
+    "    print(f'Word {word1} comes before {word2}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec8a82ef",
+   "id": "4b8ee5bf",
    "metadata": {},
    "outputs": [],
    "source": []
