--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "d453c6b1",
    "metadata": {},
    "outputs": [
@@ -266,14 +266,14 @@
      "text": [
       "Enter the word_1: egg\n",
       "Enter the word_2: chicken\n",
-      "egg comes before chicken\n"
+      "chicken comes before egg\n"
      ]
     }
    ],
    "source": [
     "word_1 = input('Enter the word_1: ')\n",
     "word_2 = input('Enter the word_2: ')\n",
-    "if word_1' < 'word_2':\n",
+    "if word_1 < word_2:\n",
     "    print(f'{word_1} comes before {word_2}')\n",
     "else:\n",
     "    print(f'{word_2} comes before {word_1}')"
