--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e283e7a6",
+   "id": "d2808b15",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6687a2d2",
+   "id": "42f66e5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "807437b8",
+   "id": "6be7a189",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "68b871ff",
+   "id": "79e4eed5",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "38d3f69b",
+   "id": "5a6450d9",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "370f157a",
+   "id": "e7a0720d",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "32ae2ae8",
+   "id": "6277d94b",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d3e084a7",
+   "id": "94a5dd52",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "29619683",
+   "id": "c18e1976",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c20d3545",
+   "id": "3d2077b2",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f0bacdd9",
+   "id": "0110946c",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8983546f",
+   "id": "12e3b02c",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "0f710991",
+   "id": "a1303950",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "6bc26728",
+   "id": "f8dd9ec0",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "1f8ca5ca",
+   "id": "80969edf",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "2560a1c5",
+   "id": "1e2c5e1f",
    "metadata": {},
    "outputs": [
     {
@@ -310,8 +310,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "7ad45247",
+   "execution_count": 26,
+   "id": "8aaea462",
    "metadata": {},
    "outputs": [
     {
@@ -320,14 +320,14 @@
      "text": [
       "Enter a word: kot\n",
       "Enter another word: pies\n",
-      "pies comes first\n"
+      "kot comes first\n"
      ]
     }
    ],
    "source": [
     "word1 = input('Enter a word: ')\n",
     "word2 = input('Enter another word: ')\n",
-    "if word1>word2:\n",
+    "if word1<word2:\n",
     "    print(f'{word1} comes first')\n",
     "else:\n",
     "    print(f'{word2} comes first')"
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b58eb6da",
+   "id": "eaaee172",
    "metadata": {},
    "outputs": [],
    "source": []
