--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -110,7 +110,7 @@
     "    print (f'{word2} is not the first word alphabetically')\n",
     "else: \n",
     "    print (f'{word2} is first word alphabetically')\n",
-    "    print (f'{word1} is not hte first word alphabetically')"
+    "    print (f'{word1} is not the first word alphabetically')"
    ]
   },
   {
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d3cf91e",
+   "id": "0ff78ec6",
    "metadata": {},
    "outputs": [],
    "source": []
