--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c56c72ed",
+   "id": "38ad9b47",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7a720c38",
+   "id": "b290012d",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87b2b63b",
+   "id": "3a537908",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11c2e456",
+   "id": "7b2dd635",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "42caf588",
+   "id": "1017883f",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "23e823b3",
+   "id": "4b971480",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "757450d2",
+   "id": "2a85491d",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "47d67de3",
+   "id": "503b62d0",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2652fb12",
+   "id": "dcdd4b21",
    "metadata": {},
    "outputs": [
     {
@@ -149,8 +149,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "806d3cb2",
+   "execution_count": 18,
+   "id": "5ec6029c",
    "metadata": {
     "scrolled": false
    },
@@ -159,8 +159,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter first wordf\n",
-      "Enter second worda\n",
+      "Enter first worda\n",
+      "Enter second wordf\n",
       "Word a comes before f\n"
      ]
     }
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b8ee5bf",
+   "id": "84f06255",
    "metadata": {},
    "outputs": [],
    "source": []
